--- a/views/index.haml
+++ b/views/index.haml
@@ -6,9 +6,58 @@
     %link{href: '/assets/application.css', rel: "stylesheet"}/
 
   %body
-    .box
-      Hi there
 
-      .red
+    .social
+      %ul
+        %li
+          %a
+            %img.svg.facebook(src='/assets/img/facebook-logo.svg')
+        %li
+          %a
+            %img.svg.twitter(src='/assets/img/twitter-logo.svg')
+        %li
+          %a
+            %img.svg.vimeo(src='/assets/img/vimeo-square-logo.svg')
+        %li
+          %a
+            %img.svg.youtube(src='/assets/img/youtube-logo.svg')
 
-  %script{src: '/assets/application.js' }
+    .header
+      #navbar
+      .stickynav.navmenu#pin1
+        %ul.nav#nav-half-one
+          %li Our work
+          %li Who we are
+          %li What we deliver
+
+        %ul.nav#nav-half-two
+          %li Who we work with
+          %li The brains
+          %li Get in touch
+
+      .stickynav.navlogo#pin2
+        %img#logo(src='/assets/img/CombinationMarkV1Dark.png')
+
+
+
+    .row
+      .twelve.columns.hero#sticky-hero
+        #hero-gradient
+      .reel
+        %h1.play-btn
+          play
+
+    .row#social-pink#pin3
+      .twelve.columns.intro
+        Hi
+
+    .row
+      .twelve.columns.intro
+        Hi
+
+  %script{ src: '//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js' }
+  %script{ src: '//cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js' }
+  %script{ src: '//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/1.3.0/jquery.scrollmagic.js' }
+  %script{ src: '//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/1.3.0/jquery.scrollmagic.debug.js' }
+  %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
+  %script{ src: '/assets/application.js' }
