--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,4 +1,6 @@
 @import "css/normalize.css";
 @import "css/skeleton.css";
+@import "css/variables";
 @import "css/global";
 @import "css/header";
+@import "css/sections";
