--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -1,117 +1,87 @@
-.hero
+.header
   position: relative
-  z-index: 9
+  height: 200vh
 
-.gradient
+.hero
+  position: absolute
   height: 100vh
+  width: 100%
   background: url("img/hero.png") no-repeat center/ cover
 
-.reel
-  background-color: rgba(0, 0, 0, 0.1)
+.hero-footer
+  position: absolute
+  height: 100vh
+  z-index: 1
+  width: 100%
+
+  .wrap
+    width: 100%
+    bottom: -10em
+    position: absolute
+
+#hero-gradient
   position: absolute
   top: 0
   right: 0
   bottom: 0
   left: 0
-
-.play-btn
-  font-family: 'Feature'
-  text-align: center
-  padding-top: 45vh
-  color: white
-
-.intro
-  height: 100vh
-
-.triangle
-  position: absolute
-  z-index: 10
-  height: 8em
-
-.triangle:after
-  content: ""
-  display: block
-  width: 0
-  height: 0
-  margin-left: -100%
-  border-left: 50vw solid transparent
-  border-right: 50vw solid transparent
-
-.triangle-down:after
-  border-top: 8em solid $blue
-
-.triangle-up:after
-  border-bottom: 8em solid $blue
-
-.triangle-down
-  top: 0
-  width: 50%
-  padding-left: 50%
-
-.triangle-up
-  bottom: 0
-
-.triangle-right
-  width: 50%
-  padding-left: 100%
-
-.triangle-left
-  width: 100%
-  padding-left: 50%
+  background-color: rgba(2, 200, 255,1)
 
 .social
   position: fixed
-  top: 15em
+  top: 7em
   right: 1em
-  z-index: 10
+  z-index: 3
   ul
     list-style: none
   li
     margin-bottom: 0
 
-.svg
-  width: 1.5em
-  height: 1.5em
-  path
-    fill: white
+.reel
+  height: 100vh
+  z-index: 2
 
-.header
-  background-color: $blue
-  width: 100%
-  z-index: 9
+#play-btn
+  font-family: 'Feature'
   text-align: center
-  height: 5em
+  padding-top: 45vh
+  color: white
 
-.affix
+.stickynav
+  width: 100%
+  z-index: 2
+  text-align: center
+
+.navmenu
   position: fixed
-  top: 0
+
+.navlogo
+  top: 45vh
+
+#logo
+  width: 10em
+  margin-top: -2em
+
+.navigation
+  height: 100vh
+  width: 100%
 
 .nav
   list-style: none
   display: inline-block
-  margin-top: 0.5em
-
+  margin-top: 2em
   li
     display: inline-block
     float: left
     padding: 0.5em 1.5em
-    color: $purple
+    color: $pink
     font-family: 'Body'
     font-weight: bold
     font-size: 0.9em
-    margin: 0.5em 0
 
-  .navlogo
-    margin: 0
-    padding: 0 1em
-    img
-      width: 4.5em
-
-
-
-
-
-
-
-
-
+#navbar
+  background-color: rgba(2, 200, 255, 1)
+  height: 6em
+  position: fixed
+  z-index: 2
+  width: 100%
