--- a/assets/css/variables.sass
+++ b/assets/css/variables.sass
@@ -1,24 +1,10 @@
-@font-face
-  font-family: 'Feature'
-  src: url('fonts/SNNeoNoire-Regular.eot')
-  src: url('fonts/SNNeoNoire-Regular.eot?#iefix') format('embedded-opentype'), url('fonts/SNNeoNoire-Regular.woff'), url('fonts/SNNeoNoire-Regular.ttf')
-
-@font-face
-  font-family: 'Body'
-  src: url('fonts/FuturaLight.eot')
-  src: url('fonts/FuturaLight.eot?#iefix') format('embedded-opentype'), url('fonts/FuturaLight.woff') format('woff'), url('fonts/FuturaLight.ttf') format('truetype')
-  font-weight: 300
-  font-style: normal
-
-@font-face
-  font-family: 'Header'
-  src: url('fonts/SerifGothicBQ-Heavy.eot')
-  src: url('fonts/SerifGothicBQ-Heavy.eot?#iefix') format('embedded-opentype'), url('fonts/SerifGothicBQ-Heavy.woff') format('woff'), url('fonts/SerifGothicBQ-Heavy.ttf') format('truetype')
-  font-weight: 500
-  font-style: normal
-
-$pink: #F46EA1
-$blue: #02C8FF
+$pink: #FF52BB
+$lightblue: #256EFF
+$blue: #003CB3
 $darkgrey: #4A4A4A
-$green: #1BF7F3
-$purple: #7E59A8
+$green: #440381
+$purple: #2F1847
+
+
+
+
