--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,6 +1,9 @@
 @import "css/normalize.css";
 @import "css/skeleton.css";
+@import "css/jquery.fullPage.css";
 @import "css/variables";
 @import "css/global";
+@import "css/font";
+@import "css/buttons";
 @import "css/header";
 @import "css/sections";
