--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -1,3 +1,7 @@
+body
+  width: 100%
+  overflow-x: hidden
+
 .triangle
   z-index: 10
   height: 8em
@@ -16,7 +20,7 @@
   border-top: 8em solid white
 
 .triangle-up-after
-  border-bottom-color: #5FD7FF
+  border-bottom-color: $blue
   border-bottom-width: 8em
   border-bottom-style: solid
 
@@ -37,14 +41,10 @@
   width: 100%
   padding-left: 50%
 
-.buffer
-  width: 100%
-  height: 10em
-  background: #5FD7FF
-  display: block
 
 .svg
   width: 1.5em
   height: 1.5em
   path
-    fill: $pink
+    fill: white
+
