--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -1,70 +1,87 @@
-.header
-  position: relative
-  height: 200vh
+.section1
+  background-color: $lightblue
 
-.hero
-  position: absolute
-  height: 100vh
-  width: 100%
-  background: url("img/hero.png") no-repeat center/ cover
+// .header
+//   position: relative
+//   height: 200vh
 
-.hero-footer
-  position: absolute
-  height: 100vh
-  z-index: 1
-  width: 100%
+// .hero
+//   position: absolute
+//   height: 100vh
+//   width: 100%
 
-  .wrap
-    width: 100%
-    bottom: -10em
-    position: absolute
+// #bgvid
+//   top: 0
+//   left: 0
+//   min-width: 100%
+//   min-height: 100%
+//   width: 100%
+//   height: auto
+//   z-index: -100
+//   background-size: cover
+//   background-position: center center
 
-#hero-gradient
-  position: absolute
-  top: 0
-  right: 0
-  bottom: 0
-  left: 0
-  background-color: rgba(2, 200, 255,1)
 
-.social
-  position: fixed
-  top: 7em
-  right: 1em
-  z-index: 3
-  ul
-    list-style: none
-  li
-    margin-bottom: 0
 
-.reel
-  height: 100vh
-  z-index: 2
+// #hero-gradient
+//   position: fixed
+//   top: 0
+//   right: 0
+//   bottom: 0
+//   left: 0
+//   background-color: rgba(37, 110, 255, 1)
 
-#play-btn
-  font-family: 'Feature'
-  text-align: center
-  padding-top: 45vh
-  color: white
 
-.stickynav
-  width: 100%
-  z-index: 2
-  text-align: center
+// .social
+//   position: fixed
+//   top: 7em
+//   right: 1em
+//   z-index: 3
+//   ul
+//     list-style: none
+//   li
+//     margin-bottom: 0
 
-.navmenu
-  position: fixed
+// .reel
+//   height: 100vh
+//   z-index: 2
+//   overflow: hidden
+
+// #play-btn
+//   font-family: 'Feature'
+//   text-align: center
+//   padding-top: 45vh
+//   color: white
+
+
+
 
 .navlogo
   top: 45vh
+  width: 100%
+  z-index: 2
+  text-align: center
+
 
 #logo
-  width: 10em
-  margin-top: -2em
+  width: 17em
+  margin-top: -5.5em
+
+
+.hero-footer
+  position: absolute
+  z-index: 1
+  width: 100%
+  bottom: 0
 
 .navigation
-  height: 100vh
+  background: $lightblue
   width: 100%
+  height: 6em
+  position: fixed
+  top: 0
+  left: 0
+  text-align: center
 
 .nav
   list-style: none
@@ -74,14 +91,7 @@
     display: inline-block
     float: left
     padding: 0.5em 1.5em
-    color: $pink
+    color: white
     font-family: 'Body'
     font-weight: bold
     font-size: 0.9em
-
-#navbar
-  background-color: rgba(2, 200, 255, 1)
-  height: 6em
-  position: fixed
-  z-index: 2
-  width: 100%
