--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -1,5 +1,24 @@
-.intro
+.sub-section
   height: 100vh
 
+#social-pink
+  color: $pink
+  h1
+    padding-top: 4em
 
+.bolt-one-divider
+  background: url("img/bolt1.png") no-repeat center
+  background-size: 100% 10em
+  width: 100%
+  height: 10em
 
+.blue-block
+  background: $blue
+
+.section-feature-image
+  width: 100%
+  padding: 1em
+  img
+    width: 90%
+    margin: 0 auto
+    display: block
