--- a/views/work/test1.haml
+++ b/views/work/test1.haml
@@ -1,1 +1,3 @@
-Case Study 1
+%video#bgvid{:autoplay => "", :loop => "", :muted => "", :playsinline => "", :poster => "/assets/img/hero2.png"}
+  %source{:src => "/assets/img/hero.webm", :type => "video/webm"}
+  %source{:src => "/assets/img/hero.mp4", :type => "video/mp4"}
