--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -1,57 +1,56 @@
 .section1
   background-color: $lightblue
 
-// .header
-//   position: relative
-//   height: 200vh
+.header
+  position: relative
+  height: 200vh
 
-// .hero
-//   position: absolute
-//   height: 100vh
-//   width: 100%
+.hero
+  position: absolute
+  height: 100vh
+  width: 100%
 
-// #bgvid
-//   top: 0
-//   left: 0
-//   min-width: 100%
-//   min-height: 100%
-//   width: 100%
-//   height: auto
-//   z-index: -100
-//   background-size: cover
-//   background-position: center center
-
-
-
-// #hero-gradient
-//   position: fixed
-//   top: 0
-//   right: 0
-//   bottom: 0
-//   left: 0
-//   background-color: rgba(37, 110, 255, 1)
+#bgvid
+  top: 0
+  left: 0
+  min-width: 100%
+  min-height: 100%
+  width: 100%
+  height: auto
+  z-index: -100
+  background-size: cover
+  background-position: center center
 
 
-// .social
-//   position: fixed
-//   top: 7em
-//   right: 1em
-//   z-index: 3
-//   ul
-//     list-style: none
-//   li
-//     margin-bottom: 0
+#hero-gradient
+  position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  background-color: rgba(37, 110, 255, 1)
 
-// .reel
-//   height: 100vh
-//   z-index: 2
-//   overflow: hidden
 
-// #play-btn
-//   font-family: 'Feature'
-//   text-align: center
-//   padding-top: 45vh
-//   color: white
+.social
+  position: fixed
+  top: 7em
+  right: 1em
+  z-index: 3
+  ul
+    list-style: none
+  li
+    margin-bottom: 0
+
+.reel
+  height: 100vh
+  z-index: 2
+  overflow: hidden
+
+#play-btn
+  font-family: 'Feature'
+  text-align: center
+  padding-top: 45vh
+  color: white
 
 
 
