Add sections for work

--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -7,6 +7,13 @@
   font-family: 'Body'
   src: url('fonts/FuturaLight.eot')
   src: url('fonts/FuturaLight.eot?#iefix') format('embedded-opentype'), url('fonts/FuturaLight.woff') format('woff'), url('fonts/FuturaLight.ttf') format('truetype')
+  font-weight: 900
+  font-style: normal
+
+@font-face
+  font-family: 'BodyBold'
+  src: url('fonts/FuturaHeavy.eot')
+  src: url('fonts/FuturaHeavy.eot?#iefix') format('embedded-opentype'), url('fonts/FuturaHeavy.woff') format('woff'), url('fonts/FuturaHeavy.ttf') format('truetype')
   font-weight: 300
   font-style: normal
 
