--- a/assets/css/buttons.sass
+++ b/assets/css/buttons.sass
@@ -1,12 +1,15 @@
 .button
   margin: 3em auto
-  width: 20em
+  width: 100%
+  max-width: 20em
   display: block
   color: white
-  background: $blue
-  border-radius: 0.1em
+  background: $lightblue
+  border-radius: 0.25em
   border: none
+  font-size: 0.9em
+  font-family: 'BodyBold'
 
 .button:hover
   color: white
-  background: $lightblue
+  background: $blue
