--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -12,13 +12,26 @@
   width: 100%
   height: 10em
 
+  h1
+    color: $blue
+
+.divider-top
+  margin-top: 5em
+
+.divider-flip
+  -webkit-transform: rotate(180deg)
+  -moz-transform: rotate(180deg)
+  -ms-transform: rotate(180deg)
+  -o-transform: rotate(180deg)
+  transform: rotate(180deg)
+
 .blue-block
-  background: $blue
+  background: $lightblue
 
 .section-feature-image
   width: 100%
   padding: 1em
   img
-    width: 90%
+    height: 50vh
     margin: 0 auto
     display: block
