--- a/views/index.haml
+++ b/views/index.haml
@@ -12,16 +12,22 @@
         .navigation
           .navbg
           %ul.nav#nav1
-            %li Who we are
-            %li What we deliver
+
+            %li
+              %a{:href => "#thirdPage/1"} Who we are
+            %li
+              %a{:href => "#fourthPage/1'"} What we deliver
 
           %ul.nav.navlogo
             %li
-              %img(src='/assets/img/CombinationMarkV1Dark.png')
+              %a{:href => "#secondPage/1"}
+                %img(src='/assets/img/CombinationMarkV1Dark.png')
 
           %ul.nav#nav2
-            %li Who we work with
-            %li Get in touch
+            %li
+              %a{:href => "#thirdPage/1"} Who we work with
+            %li
+              %a{:href => "#fourthPage/1'"} Get in touch
 
         .logo
           %img(src='/assets/img/CombinationMarkV1Dark.png')
@@ -32,8 +38,8 @@
           .triangle.triangle-up.triangle-left
             .triangle-after.triangle-up-after.triangle-left-after
 
-
       .section
+        .overlay
         %video#vid{:autobuffer => "", :autoplay => "", :video => ""}
           %source#webm{:src => "/assets/img/hero.webm", :type => "video/mp4"}
           %source#mp4{:src => "/assets/img/hero.mp4", :type => "video/mp4"}
@@ -62,13 +68,24 @@
       #whatsection.section
         .row.sub-section
           .twelve.columns
-            .bolt-one-divider
+            .bolt-one-divider.divider-top
               .ten.offset-by-one.columns
                 %h1
                   What we create
             .blue-block
               .section-feature-image
                 %img(src='/assets/img/section-feature-image.png')
+            .bolt-one-divider.divider-flip
+      #whatsection.section
+        .blue-block
+          .section-feature-image
+            %img(src='/assets/img/section-feature-image.png')
+        .bolt-one-divider.divider-flip
+      #whatsection.section
+        .blue-block
+          .section-feature-image
+            %img(src='/assets/img/section-feature-image.png')
+        .bolt-one-divider.divider-flip
 
   %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js' }
   %script{ src: '/assets/application.js' }
