--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,11 +1,11 @@
 @import "css/normalize.css";
 @import "css/skeleton.css";
 @import "css/jquery.fullPage.css";
-@import "css/nav.scss";
 @import "css/animate.css";
 @import "css/variables";
 @import "css/global";
 @import "css/font";
+@import "css/nav";
 @import "css/buttons";
 @import "css/header";
 @import "css/sections";
