--- a/views/index.haml
+++ b/views/index.haml
@@ -56,6 +56,9 @@
             .triangle-after.triangle-up-after.triangle-left-after
 
       .section
+        %a.play-btn{ :href => "#" }
+          %p Play
+
         .overlay
         %video#vid{:autobuffer => "", :autoplay => "", :video => ""}
           %source#webm{:src => "/assets/img/hero.webm", :type => "video/mp4"}
