--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -53,10 +53,20 @@ body
   width: 100%
   padding-left: 50%
 
-
 .svg
   width: 1.5em
   height: 1.5em
   path
     fill: white
 
+.play-btn
+  position: absolute
+  width: 100%
+  top: 35vh
+  z-index: 10
+  text-align: center
+  text-decoration: none
+  p
+    font-family: 'Feature'
+    font-size: 6em
+    color: white
