--- a/assets/application.scss
+++ b/assets/application.scss
@@ -1,6 +1,7 @@
 @import "css/normalize.css";
 @import "css/skeleton.css";
 @import "css/jquery.fullPage.css";
+@import "css/lity.min.css";
 @import "css/animate.css";
 @import "css/variables";
 @import "css/global";
