--- a/assets/css/buttons.sass
+++ b/assets/css/buttons.sass
@@ -1,5 +1,5 @@
 .button
-  margin: 3em auto
+  margin: 0
   width: 100%
   max-width: 20em
   display: block
@@ -10,6 +10,19 @@
   font-size: 0.9em
   font-family: 'BodyBold'
 
+.button-center
+  margin: 3em auto
+
 .button:hover
   color: white
   background: $blue
+
+.blue-block
+  .button
+    background: white
+    color: $lightblue
+
+  .button:hover
+    background: white
+    color: $lightblue
+
