--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -1,7 +1,8 @@
 .sub-section
   height: 100vh
+  overflow: hidden
 
-#social-pink
+.pink
   color: $pink
   h1
     padding-top: 4em
@@ -15,6 +16,12 @@
   h1
     color: $blue
 
+.bolt-two-divider
+  background: url("img/bolt2.png") no-repeat center
+  background-size: 100% 10em
+  width: 100%
+  height: 10em
+
 .divider-top
   margin-top: 5em
 
@@ -25,13 +32,77 @@
   -o-transform: rotate(180deg)
   transform: rotate(180deg)
 
+.buffer
+  width: 100%
+  height: 82px
+
+.buffer-blue
+  background: $lightblue
+
 .blue-block
   background: $lightblue
+  height: 100%
+  width: 100%
+
+.buffer-pink
+  background: $purple
+
+.pink-block
+  background: $purple
+  height: 100%
+  width: 100%
 
 .section-feature-image
   width: 100%
   padding: 1em
   img
-    height: 50vh
+    width: 100%
     margin: 0 auto
     display: block
+
+.section-image
+  margin-top: -3em
+  img
+    width: 95%
+    margin: 0 auto
+    display: block
+    padding: 1em
+
+.section-colums
+  height: 100%
+
+.section-icon
+  img
+    width: 5em
+
+.outer
+  display: table
+  position: absolute
+  height: 70%
+  width: 100%
+
+.middle
+  display: table-cell
+  vertical-align: middle
+
+.inner
+  margin-left: auto
+  margin-right: auto
+
+.section-icon
+  display: inline-block
+  width: 20%
+  float: left
+
+.section-text
+  display: inline-block
+  width: 80%
+  float: left
+  p
+    margin-bottom: 0
+
+.section-description
+  padding: 1em
+
+
+
