--- a/assets/application.scss
+++ b/assets/application.scss
@@ -10,3 +10,6 @@
 @import "css/buttons";
 @import "css/header";
 @import "css/sections";
+@import "css/clients";
+@import "css/footer";
+@import "css/no-fullpage";
