--- a/views/contact.haml
+++ b/views/contact.haml
@@ -1,2 +1,43 @@
 .section
-  FOOTER!!!
+  .sub-section
+    .row.wide-row
+      .twelve.columns.section-colums
+        .bolt-one-divider.divider-top.divider-pink
+          .row
+            .ten.columns
+              %h1.header
+                Get in touch
+        .mobile-header.pink-bg
+          %h1
+            Get in touch
+    .pink-block
+      .row.footer-section
+        .four.columns
+          %h2
+            Contacts us on
+          %p
+            Tel: 020 72414432
+            %br
+            Mob: 07855259898
+            %br
+            Email: hello@tanjunmedia.com
+        .four.offset-by-four.columns
+          .social
+            %img{:src => "assets/img/social/social1.png"}
+            %img{:src => "assets/img/social/social2.png"}
+            %img{:src => "assets/img/social/social3.png"}
+            %img{:src => "assets/img/social/social4.png"}
+            %img{:src => "assets/img/social/social5.png"}
+          %p.right
+            COMPANY NO: 06934128
+      .row.footer-section
+        .four.columns
+          %h2
+            Find us at
+          %p
+            TANJUN MEDIA, UNIT 5,
+            %br
+            1C SHELFORD PLACE, LONDON, N16
+        .four.offset-by-four.columns
+          .footer-logo
+            %img{:src => "assets/img/CombinationMarkV1White.png"}
