--- a/views/index.haml
+++ b/views/index.haml
@@ -7,13 +7,14 @@
     %link{href: '/assets/application.css', rel: "stylesheet"}/
 
   %body
-    #fullpage
+    #fullpage.false
 
       = haml :navigation
       = haml :hero
       = haml :reel
       = haml :about
       = haml :work
+      = haml :clients
       = haml :contact
 
 
