--- a/views/navigation.haml
+++ b/views/navigation.haml
@@ -4,16 +4,16 @@
 
   .mobile-nav
     %ul.nav
+      %a.mobile-nav-link{:href => "#secondPage/1"}
+        %li Our reel
       %a.mobile-nav-link{:href => "#thirdPage/1"}
         %li Who we are
-      %a.mobile-nav-link{:href => "#thirdPage/1"}
-        %li Who we are
-      %a.mobile-nav-link{:href => "#thirdPage/1"}
-        %li Who we are
-      %a.mobile-nav-link{:href => "#thirdPage/1"}
-        %li Who we are
-      %a.mobile-nav-link{:href => "#thirdPage/1"}
-        %li Who we are
+      %a.mobile-nav-link{:href => "#fourthPage/1"}
+        %li What we deliver
+      %a.mobile-nav-link{:href => "#sixthPage/1"}
+        %li Who we work with
+      %a.mobile-nav-link{:href => "#seventhPage/1"}
+        %li Get in touch
 
 
   .desktop-nav
@@ -30,6 +30,6 @@
 
     %ul.nav#nav2
       %li
-        %a{:href => "#thirdPage/1"} Who we work with
+        %a{:href => "#sixthPage/1"} Who we work with
       %li
-        %a{:href => "#fourthPage/1'"} Get in touch
+        %a{:href => "#seventhPage/1'"} Get in touch
