--- a/assets/css/buttons.sass
+++ b/assets/css/buttons.sass
@@ -7,8 +7,8 @@
   background: $lightblue
   border-radius: 0.25em
   border: none
-  font-size: 0.9em
-  font-family: 'BodyBold'
+  padding: 0.5em
+  height: auto
 
 .button-center
   margin: 3em auto
@@ -26,3 +26,7 @@
     background: white
     color: $lightblue
 
+
+@media (max-width: 1300px)
+  .button
+    padding: 0.15em
