--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -27,13 +27,16 @@
 h1
   font-family: 'Header'
   padding: 1em 0 0.5em 0
+  font-size: 2.3em
 
 p
   font-family: 'Body'
   padding: 0.7em 0
+  font-size: 1.6em
 
 .button
-  font-family: 'Body'
+  font-size: 1.3em
+  font-family: 'BodyBold'
 
 h2
   font-family: 'Header'
@@ -42,3 +45,102 @@ h2
 .blue-block
   h2, p
     color: white
+
+.nav
+  li
+    a
+      font-family: 'BodyBold'
+      font-weight: 900
+      font-size: 1.3em
+      text-decoration: none
+
+.play-btn
+  p
+    font-family: 'Feature'
+    font-size: 8em
+
+@media (max-width: 1800px)
+
+  p
+    font-size: 1.4em
+
+  .button
+    font-size: 1.1em
+
+@media (max-width: 1700px)
+
+  h1
+    font-size: 1.8em
+
+  p
+    font-size: 1.2em
+
+  .button
+    font-size: 1em
+
+  h2
+    font-size: 1.6em
+
+  .nav
+    li
+      a
+        font-size: 1em
+
+  .play-btn
+    p
+      font-size: 6em
+
+
+@media (max-width: 1300px)
+
+  h1
+    font-size: 1.6em
+
+  p
+    font-size: 1em
+
+  .button
+    font-size: 0.9em
+
+  h2
+    font-size: 1.3em
+
+  .nav
+    li
+      a
+        font-size: 0.9em
+
+  .play-btn
+    p
+      font-size: 5em
+
+@media (max-width: 700px)
+
+  h1
+    font-size: 1.8em
+
+  p
+    font-size: 1em
+
+  .button
+    font-size: 1em
+
+  h2
+    font-size: 1.4em
+
+@media (max-width: 550px)
+
+  h1
+    font-size: 1.6em
+
+  h2
+    font-size: 1.3em
+
+  p
+    font-size: 1em
+
+  .button
+    font-size: 0.9em
+
+
+
