--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -38,9 +38,15 @@ html, body
   text-align: center
 
   img
-    width: 17em
+    width: 24em
     margin-top: -5.5em
 
+@media (max-width: 1500px)
+
+  .logo
+
+    img
+      width: 18em
 
 .hero-footer
   position: absolute
@@ -66,3 +72,13 @@ html, body
   height: auto
   overflow: hidden
 
+
+.play-btn
+  position: absolute
+  width: 100%
+  top: 35vh
+  z-index: 10
+  text-align: center
+  text-decoration: none
+  p
+    color: white
