--- a/views/work-sections/work_section.haml
+++ b/views/work-sections/work_section.haml
@@ -1,30 +1,25 @@
 .section
   .sub-section
-    .row
-      .twelve.columns.section-colums
-        .buffer{ :class => "buffer-#{color}"}
-        .bolt-two-divider.divider-flip
-    .row
-      .five.offset-by-one.columns.section-image
-        %img(src='/assets/img/section-image.png')
-      .five.columns.section-image
-        %img(src='/assets/img/section-image.png')
-    .row
-      .five.offset-by-one.columns
-        .section-description
-          .section-icon
-            %img(src='/assets/img/small&nimble-blue.png')
-          .section-text
-            %h2 Small and Nimble
-            %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
-            %a.button
-              View case study
-      .five.columns
-        .section-description
-          .section-icon
-            %img(src='/assets/img/small&nimble-blue.png')
-          .section-text
-            %h2 Small and Nimble
-            %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
-            %a.button
-              View case study
+    - if header == true
+      .row.wide-row
+        .twelve.columns.section-colums
+          .bolt-one-divider.divider-top
+            .row
+              .ten.columns
+                %h1.header
+                  What we create
+          .mobile-header.blue-bg
+            %h1
+              What we create
+    - if header == true
+      .blue-block.blue-block-small
+        = haml :'work-sections/work_block'
+    - else
+      .blue-block.blue-block-long
+        = haml :'work-sections/work_block'
+
+    - if header == false
+      .row.wide-row
+        .twelve.columns.section-colums
+          .bolt-one-divider.divider-flip
+            .ten.offset-by-one.columns
