--- a/views/work.haml
+++ b/views/work.haml
@@ -1,4 +1,3 @@
-= haml :'work-sections/work_feature_section', :locals => { :color => 'blue', :header => true }
-= haml :'work-sections/work_section', :locals => { :color => 'blue' }
-= haml :'work-sections/work_feature_section', :locals => { :color => 'pink', :header => false }
-= haml :'work-sections/work_section', :locals => { :color => 'pink' }
+= haml :'work-sections/work_section', :locals => { :header => true }
+= haml :'work-sections/work_section', :locals => { :header => false }
+
