Update menu to work in fallback

--- a/views/navigation.haml
+++ b/views/navigation.haml
@@ -4,32 +4,32 @@
 
   .mobile-nav
     %ul.nav
-      %a.mobile-nav-link{:href => "#secondPage/1"}
+      %a.mobile-nav-link{:href => "#secondPage"}
         %li Our reel
-      %a.mobile-nav-link{:href => "#thirdPage/1"}
+      %a.mobile-nav-link{:href => "#thirdPage"}
         %li Who we are
-      %a.mobile-nav-link{:href => "#fourthPage/1"}
+      %a.mobile-nav-link{:href => "#fourthPage"}
         %li What we deliver
-      %a.mobile-nav-link{:href => "#sixthPage/1"}
+      %a.mobile-nav-link{:href => "#sixthPage"}
         %li Who we work with
-      %a.mobile-nav-link{:href => "#seventhPage/1"}
+      %a.mobile-nav-link{:href => "#seventhPage"}
         %li Get in touch
 
 
   .desktop-nav
     %ul.nav#nav1
       %li
-        %a{:href => "#thirdPage/1"} Who we are
+        %a{:href => "#thirdPage"} Who we are
       %li
-        %a{:href => "#fourthPage/1'"} What we deliver
+        %a{:href => "#fourthPage"} What we deliver
 
     %ul.nav.navlogo
       %li
-        %a{:href => "#secondPage/1"}
+        %a{:href => "#secondPage"}
           %img(src='/assets/img/CombinationMarkV1Dark.png')
 
     %ul.nav#nav2
       %li
-        %a{:href => "#sixthPage/1"} Who we work with
+        %a{:href => "#sixthPage"} Who we work with
       %li
-        %a{:href => "#seventhPage/1'"} Get in touch
+        %a{:href => "#seventhPage"} Get in touch
