--- a/assets/css/fullpage-false.sass
+++ b/assets/css/fullpage-false.sass
@@ -55,3 +55,9 @@ html.fullpage-false
       margin: 0
       padding: 1em 4%
       margin-top: 1em
+
+
+  @media (max-width: 700px)
+
+    .navigation
+      background: none
