--- a/views/reel.haml
+++ b/views/reel.haml
@@ -1,4 +1,4 @@
-.section.section-large
+.section.section-large#secondPage
 
   .lity-iframe-container.lity-hide
     %iframe{:allowfullscreen => "", :webkitallowfullscreen => "", :mozallowfullscreen => "", :frameborder => "0", :src => "https://player.vimeo.com/video/203277091"}
