clean up for heroku

--- a/views/hero.haml
+++ b/views/hero.haml
@@ -1,6 +1,6 @@
 .section.section1.section-large
   .logo
-    %img{:src => 'assets/img/CombinationMarkV1Pink.png'}
+    %img{:src => "assets/img/CombinationMarkV1Pink.png"}
 
   .hero-footer
     .triangle.triangle-up.triangle-right
