--- a/views/navigation.haml
+++ b/views/navigation.haml
@@ -26,7 +26,7 @@
     %ul.nav.navlogo
       %li
         %a{:href => "#secondPage"}
-          %img{:src => 'assets/img/CombinationMarkV1Pink.png'}
+          %img{:src => "assets/img/CombinationMarkV1Pink.png"}
 
     %ul.nav#nav2
       %li
