--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -7,7 +7,8 @@ html, body
   overflow: hidden
 
 .section
-  overflow: hidden
+  overflow-x: hidden
+  overflow-y: hidden
 
 #vid
   position: absolute
@@ -30,6 +31,9 @@ html, body
   height: auto
   background-size: cover
   background-position: center center
+
+#bgvid
+  position: fixed
 
 .logo
   top: 45vh
