--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -71,7 +71,8 @@
 .white-bg
   background: white
 
-
+.section1
+  min-height: 600px
 
 .section
   height: 100vh
@@ -109,6 +110,7 @@
   display: table
   position: absolute
   height: 100%
+  height: 100vh
   width: 100%
 
 
